#90 fix speaker name bleeding out of table cell

--- a/src/main/webapp/public/less/dukecon.less
+++ b/src/main/webapp/public/less/dukecon.less
@@ -482,7 +482,6 @@ span.twitter a {
     }
     .title {
         cursor: pointer;
-        white-space: nowrap;
         a {
             padding: 0;
         }
@@ -954,7 +953,7 @@ span.twitter a {
             width: 95px;
             white-space: normal;
             img {
-                width: 30px;
+                display: block;
             }
             .talk-cell {
                 width:90px;
